--- a/MorehouseFinalProject/pom.xml
+++ b/MorehouseFinalProject/pom.xml
@@ -6,6 +6,8 @@
     <artifactId>MorehouseFinalProject</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
+    
+    
 
     <name>MorehouseFinalProject</name>
 
@@ -38,6 +40,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>2.0.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.21.0.1</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
