--- a/MorehouseFinalProject/src/main/webapp/WEB-INF/web.xml
+++ b/MorehouseFinalProject/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,7 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>MainViewController</servlet-name>
-        <url-pattern>/MainView</url-pattern>
+        <url-pattern>/Main</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>NewBookingController</servlet-name>
