--- a/MorehouseFinalProject/pom.xml
+++ b/MorehouseFinalProject/pom.xml
@@ -8,6 +8,7 @@
     <packaging>war</packaging>
     
     
+    
 
     <name>MorehouseFinalProject</name>
 
@@ -17,9 +18,22 @@
     </properties>
     
     <dependencies>
-        
-
-        
+        <!-- https://mvnrepository.com/artifact/com.google.firebase/firebase-admin -->
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-server-sdk</artifactId>
+            <version>0.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.firebase</groupId>
+            <artifactId>firebase-client-jvm</artifactId>
+            <version>2.5.2</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
