--- a/MorehouseFinalProject/src/main/webapp/WEB-INF/web.xml
+++ b/MorehouseFinalProject/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,18 @@
         <servlet-name>LogoutController</servlet-name>
         <servlet-class>com.morehousefinalproject.LogoutController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>UserInfoController</servlet-name>
+        <servlet-class>com.morehousefinalproject.UserInfoController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DeleteEntryController</servlet-name>
+        <servlet-class>com.morehousefinalproject.DeleteEntryController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DeletionErrorController</servlet-name>
+        <servlet-class>com.morehousefinalproject.DeletionErrorController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/Login</url-pattern>
@@ -39,6 +51,18 @@
     <servlet-mapping>
         <servlet-name>LogoutController</servlet-name>
         <url-pattern>/Logout</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UserInfoController</servlet-name>
+        <url-pattern>/UserInfo</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DeleteEntryController</servlet-name>
+        <url-pattern>/DeleteEntry</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DeletionErrorController</servlet-name>
+        <url-pattern>/DeletionError</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
